syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.demo";

service AnalyticsService {
  rpc CalculatePlayerRating (PlayerRatingRequest) returns (PlayerRatingResponse) {}
}

message PlayerRatingRequest {
  int64 player_id = 1;
  int64 match_id = 2;
}

message PlayerRatingResponse {
  int64 player_id = 1;
  int64 match_id = 2;
  int32 rating_score = 3;
  string verdict = 4;
}